--- a/PartTwo/part2.html
+++ b/PartTwo/part2.html
@@ -17,6 +17,8 @@
         rel="stylesheet">
     <!-- This adds the icon Kit -->
     <link rel="stylesheet" href="../all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <!-- This is used to render all elemnts normally for all browsers -->
     <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="part2.css">
