--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <!-- This adds the Icons Kit -->
-    <!-- <link rel="stylesheet" href="../all.min.css"> -->
+    <link rel="stylesheet" href="../all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- This is used to render all elemnts normally for all browsers -->
