--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -46,6 +46,10 @@
         </nav>
     </div>
     <div class="image">
+        <video autoplay muted loop playsinline class="background-video">
+            <source src="../Images/MovingGrid.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <div class="text">
             <h2>Ai Homework</h2>
             <p>This project explores two key approaches in machine learning classification, binary and multi-class
@@ -87,7 +91,7 @@
                 <input type="number" id="learning-rate" step="0.001" value="0.01">
 
                 <label for="max-iterations">Max Iterations:</label>
-                <input type="number" id="max-iterations" value="1000">
+                <input type="number" id="max-iterations" value="10000">
             </div>
 
 
@@ -99,10 +103,6 @@
             <!-- Display accuracy -->
             <div id="accuracy" style="margin-top: 10px;">Accuracy: </div>
 
-            <!-- New button for Multi-Class Classification -->
-            <button id="multi-class-btn">
-                <i class="fa-solid fa-caret-right"></i>
-            </button>
 
             <div class="input-section">
                 <label for="binary-input-x">Enter X Coordinate (Binary):</label>
@@ -115,6 +115,10 @@
             <button id="binary-predict-btn">Predict Group (Binary)</button>
 
             <div id="binary-output-result" style="margin-top: 10px;"></div>
+            <!-- New button for Multi-Class Classification -->
+            <button id="multi-class-btn">
+                <i class="fa-solid fa-caret-right"></i>
+            </button>
         </div>
 
         <div class="Canvas">
