Adding A simple code Icon

--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -23,6 +23,8 @@
 
     <!-- This is used to render all elemnts normally for all browsers -->
     <link rel="stylesheet" href="../normalize.css">
+    <link rel="icon" type="image/x-icon" href="../Images/CodeIcon.png">
+
 </head>
 
 <body>
