--- a/PartTwo/part2.html
+++ b/PartTwo/part2.html
@@ -21,6 +21,7 @@
     <!-- This is used to render all elemnts normally for all browsers -->
     <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="part2.css">
+    <link rel="icon" type="image/x-icon" href="../Images/CodeIcon.png">
 </head>
 
 <body>
