--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -98,12 +98,12 @@
 
 
             <!-- Buttons for learning and clearing the canvas -->
-            <button id="learn-btn">Learn and Draw Line</button>
-            <button id="clear-btn">Clear Canvas</button>
+            <button id="learn-btn"><i class="fa-solid fa-play"></i> Start Learning</button>
+            <button id="clear-btn"><i class="fa-solid fa-trash"></i> Clear Canvas</button>
 
 
             <!-- Display accuracy -->
-            <div id="accuracy" style="margin-top: 10px;">Accuracy: </div>
+            <div id="accuracy" style="margin: 15px 0;">Accuracy: </div>
 
 
             <div class="input-section">
@@ -114,13 +114,13 @@
                 <input type="number" id="binary-input-y" />
             </div>
 
-            <button id="binary-predict-btn">Predict Group (Binary)</button>
-
-            <div id="binary-output-result" style="margin-top: 10px;"></div>
+            <button id="binary-predict-btn"><i class="fa-solid fa-magnifying-glass"></i> Predict Group</button>
             <!-- New button for Multi-Class Classification -->
             <button id="multi-class-btn">
                 <i class="fa-solid fa-caret-right"></i>
             </button>
+
+            <div id="binary-output-result" style="margin-top: 10px;"></div>
         </div>
 
         <div class="Canvas">
