Add a loading mechanism and adding an svg icon

--- a/PartTwo/part2.html
+++ b/PartTwo/part2.html
@@ -21,7 +21,9 @@
     <!-- This is used to render all elemnts normally for all browsers -->
     <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="part2.css">
-    <link rel="icon" type="image/x-icon" href="../Images/CodeIcon.png">
+
+    <link rel="icon" type="image/svg+xml" href="../Images/AiSVG.svg">
+    <link rel="icon" type="image/x-icon" href="../Images/AiSVG.svg">
 </head>
 
 <body>
@@ -30,6 +32,7 @@
         <p>Project's Part Two.</p>
     </div>
     <div class="container" id="Part2">
+        <div id="loading" style="display: none;"></div>
         <div class="content">
             <!-- Form inputs for learning rate and iterations -->
             <div class="form-container">
