--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -24,7 +24,7 @@
     <!-- This is used to render all elemnts normally for all browsers -->
     <link rel="stylesheet" href="../normalize.css">
     <link rel="icon" type="image/svg+xml" href="../Images/AiSVG.svg">
-    <link rel="icon" type="image/x-icon" href="../Images/AiSVG.svg">>
+    <link rel="icon" type="image/x-icon" href="../Images/AiSVG.svg">
 
 </head>
 
