Adding a Scroll to top button

--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -149,6 +149,8 @@
         <span>© - 2024 All rights are reserverd.</span>
     </footer>
 
+    <button id="scrollToTop" onclick="scrollToTop()">↓</button>
+
     <script src="script.js"></script>
 </body>
 
