Fixing A typo and enlarging elements

--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -54,7 +54,7 @@
             Your browser does not support the video tag.
         </video>
         <div class="text">
-            <h2>Ai Project</h2>
+            <h2>AI Project</h2>
             <p>This project explores two key approaches in machine learning classification, binary and multi-class
                 classification. Through interactive visualizations, users can plot points on a canvas to dynamically
                 classify data points based on their chosen category.
