Key Changes to the Project

--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -34,7 +34,7 @@
 
             <ul>
                 <li>
-                    <i class="fa-solid fa-code" style="font-size: 18px"></i>
+                    <i class="fa-solid fa-code" style="font-size: 18px" id="spinning"></i>
                 </li>
                 <li>
                     <a href="#About">About</a>
@@ -49,16 +49,13 @@
         </nav>
     </div>
     <div class="image">
-        <video autoplay muted loop playsinline class="background-video">
-            <source src="../Images/MovingGrid.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
         <div class="text">
             <h2>AI Project</h2>
             <p>This project explores two key approaches in machine learning classification, binary and multi-class
                 classification. Through interactive visualizations, users can plot points on a canvas to dynamically
                 classify data points based on their chosen category.
             </p>
+            <button id="get-started">Get Started</button>
         </div>
     </div>
     <div class="main-heading" id="About">
