Main responsive changes

--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -96,8 +96,10 @@
 
 
             <!-- Buttons for learning and clearing the canvas -->
-            <button id="learn-btn"><i class="fa-solid fa-play"></i> Start Learning</button>
-            <button id="clear-btn"><i class="fa-solid fa-trash"></i> Clear Canvas</button>
+            <div class="analyze-buttons">
+                <button id="learn-btn"><i class="fa-solid fa-play"></i> Start Learning</button>
+                <button id="clear-btn"><i class="fa-solid fa-trash"></i> Clear Canvas</button>
+            </div>
 
 
             <!-- Display accuracy -->
