Adding Dark/Light Theme Toggle button

--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -31,10 +31,10 @@
 <body>
     <div class="starter">
         <nav>
-
+            
             <ul>
                 <li>
-                    <i class="fa-solid fa-code" style="font-size: 18px" id="spinning"></i>
+                    <i id="code" class="fa-solid fa-code" style="font-size: 18px" id="spinning"></i>
                 </li>
                 <li>
                     <a href="#About">About</a>
@@ -45,6 +45,12 @@
                 <li>
                     <a href="#Creators">Creators</a>
                 </li>
+                <li>
+                    <button id="themeToggle"><i class="fa fa-moon"></i></button>
+                </li>
+                <div id="blist">
+                    <i class="fa fa-bars"></i>
+                </div>
             </ul>
         </nav>
     </div>
