Color gradient Fixis & added a Burger List for mobile users

--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -48,9 +48,9 @@
                 <li>
                     <button id="themeToggle"><i class="fa fa-moon"></i></button>
                 </li>
-                <div id="blist">
+                <li id="blist">
                     <i class="fa fa-bars"></i>
-                </div>
+                </li>
             </ul>
         </nav>
     </div>
