Adding a Bar button for mobile users and ensuring responsivity

--- a/PartOne/index.html
+++ b/PartOne/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="starter">
         <nav>
-            
+            <div class="logo">Logo</div>
             <ul>
                 <li>
                     <i class="fa-solid fa-code" style="font-size: 18px" id="spinning"></i>
@@ -48,10 +48,8 @@
                 <li>
                     <button id="themeToggle"><i class="fa fa-moon"></i></button>
                 </li>
-                <li id="blist">
-                    <i class="fa fa-bars"></i>
-                </li>
             </ul>
+            <i class="fa fa-bars"></i>
         </nav>
     </div>
     <div class="image">
