--- a/PartTwo/part2.html
+++ b/PartTwo/part2.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="part2.css">
 
-    <link rel="icon" type="image/svg+xml" href="../Images/AiSVG.svg">
-    <link rel="icon" type="image/x-icon" href="../Images/AiSVG.svg">
+    <link rel="icon" type="image/svg+xml" href="../Images/Logo.svg">
+    <link rel="icon" type="image/x-icon" href="../Images/Logo.svg">
 </head>
 
 <body>
